Kubernetes完全ガイド/20181118/sample-env-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: sample-env-pod
  labels: 
    app: sample-app
spec:
  containers:
    - name: nginx-container
      image: nginx:1.12
